--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ owner:
   twitter: vintem12
   github: vintem
   linkedin: https://ca.linkedin.com/in/vintem
-  instamgram: https://www.instagram.com/vintem/
+  instagram: vintem
+  stackexchange: https://stackoverflow.com/users/186836/vintem
   
 goog_analytics: UA-41090209-2
 
