Fix google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ owner:
   instagram: vintem
   stackexchange: https://stackoverflow.com/users/186836/vintem
   
-goog_analytics: UA-41090209-2
+google_analytics: UA-41090209-2
 
 links:
   - title: Home
