--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-url: http://templecoding.com # the base hostname & protocol for your site
+#url: http://templecoding.com # the base hostname & protocol for your site
+url: http://localhost:4000
 title: Temple Coding
 subtitle: code, technology and other geek stuff
 default_bg: background/shoes.jpg
