--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-url: http://templecoding.com # the base hostname & protocol for your site
+url: https://templecoding.com # the base hostname & protocol for your site
+enforce_ssl: templecoding.com
 #url: http://localhost:4000
 title: Temple Coding
 subtitle: code, technology and other geek stuff
