--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-helmet": "^5.2.0",
+        "react-share": "^2.2.0",
         "react-typography": "^0.16.13",
         "styled-components": "^3.3.2",
         "typography": "^0.16.17"
