--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "prismjs": "^1.14.0",
         "prop-types": "^15.6.1",
         "react": "^16.4.1",
+        "react-disqus-comments": "^1.2.0",
         "react-dom": "^16.4.1",
         "react-helmet": "^5.2.0",
         "react-icons": "^2.2.7",
