--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "babel-plugin-styled-components": "^1.5.1",
         "disqus-react": "^1.0.5",
         "gatsby": "^2.0.0-beta.40",
+        "gatsby-paginate": "^1.0.16",
         "gatsby-plugin-catch-links": "^2.0.2-beta.2",
         "gatsby-plugin-feed": "^1.3.25",
         "gatsby-plugin-google-analytics": "^1.0.31",
