--- a/package.json
+++ b/package.json
@@ -4,40 +4,43 @@
     "version": "1.0.0",
     "author": "Thiago Temple <thitemple@gmail.com>",
     "dependencies": {
-        "babel-plugin-styled-components": "^1.5.1",
-        "disqus-react": "^1.0.5",
-        "gatsby": "^2.0.0-beta.40",
-        "gatsby-paginate": "^1.0.16",
-        "gatsby-plugin-catch-links": "^2.0.2-beta.2",
-        "gatsby-plugin-feed": "^1.3.25",
-        "gatsby-plugin-google-analytics": "^1.0.31",
-        "gatsby-plugin-lodash": "^3.0.1-beta.2",
-        "gatsby-plugin-manifest": "^2.0.2-beta.2",
-        "gatsby-plugin-offline": "^2.0.0-beta.3",
-        "gatsby-plugin-react-helmet": "^3.0.0-beta.3",
-        "gatsby-plugin-sharp": "^1.6.48",
-        "gatsby-plugin-sitemap": "^2.0.0-beta.2",
-        "gatsby-plugin-styled-components": "^3.0.0-beta.2",
-        "gatsby-plugin-typography": "^2.2.0-beta.2",
-        "gatsby-remark-autolink-headers": "^2.0.0-beta.3",
-        "gatsby-remark-copy-linked-files": "^1.5.37",
+        "babel-plugin-styled-components": "1.10.0",
+        "disqus-react": "1.0.5",
+        "gatsby": "2.8.5",
+        "gatsby-link": "^2.1.1",
+        "gatsby-plugin-catch-links": "2.0.15",
+        "gatsby-plugin-feed": "2.2.2",
+        "gatsby-plugin-google-analytics": "2.0.20",
+        "gatsby-plugin-lodash": "3.0.5",
+        "gatsby-plugin-manifest": "2.1.1",
+        "gatsby-plugin-offline": "2.1.1",
+        "gatsby-plugin-react-helmet": "3.0.12",
+        "gatsby-plugin-sharp": "2.1.3",
+        "gatsby-plugin-sitemap": "2.1.0",
+        "gatsby-plugin-styled-components": "3.0.7",
+        "gatsby-plugin-typography": "2.2.13",
+        "gatsby-remark-autolink-headers": "2.0.16",
+        "gatsby-remark-copy-linked-files": "2.0.13",
         "gatsby-remark-external-links": "0.0.4",
-        "gatsby-remark-images": "^1.5.67",
-        "gatsby-remark-prismjs": "^3.0.0-beta.3",
-        "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
-        "gatsby-source-filesystem": "^2.0.1-beta.5",
-        "gatsby-transformer-remark": "^2.1.1-beta.3",
-        "polished": "^1.9.2",
-        "prismjs": "^1.14.0",
-        "prop-types": "^15.6.1",
-        "react": "^16.4.1",
-        "react-dom": "^16.4.1",
-        "react-helmet": "^5.2.0",
-        "react-icons": "^2.2.7",
-        "react-share": "^2.2.0",
-        "react-typography": "^0.16.13",
-        "styled-components": "^3.3.2",
-        "typography": "^0.16.17"
+        "gatsby-remark-images": "3.0.14",
+        "gatsby-remark-prismjs": "3.2.10",
+        "gatsby-remark-relative-images": "^0.2.2",
+        "gatsby-remark-responsive-image": "1.0.0-alpha13-alpha.435e0178",
+        "gatsby-source-filesystem": "2.0.38",
+        "gatsby-transformer-remark": "2.3.12",
+        "lodash": "^4.17.11",
+        "polished": "3.4.0",
+        "prismjs": "1.16.0",
+        "prop-types": "^15.7.2",
+        "ramda": "^0.26.1",
+        "react": "16.8.6",
+        "react-dom": "16.8.6",
+        "react-helmet": "5.2.1",
+        "react-icons": "3.7.0",
+        "react-share": "3.0.0",
+        "react-typography": "0.16.19",
+        "styled-components": "4.3.0",
+        "typography": "0.16.19"
     },
     "keywords": [
         "gatsby",
@@ -49,20 +52,21 @@
     "main": "n/a",
     "scripts": {
         "build": "gatsby build",
-        "serve": "gatsby serve",
-        "dev": "gatsby develop -o"
+        "dev": "gatsby clean && gatsby develop"
     },
     "devDependencies": {
-        "babel-eslint": "^8.2.2",
-        "babel-preset-env": "^1.6.1",
-        "eslint": "^4.18.2",
-        "eslint-config-airbnb": "^16.1.0",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-import": "^2.9.0",
-        "eslint-plugin-jsx-a11y": "^6.0.3",
-        "eslint-plugin-prettier": "^2.6.0",
-        "eslint-plugin-react": "^7.7.0",
-        "prettier": "^1.11.1"
+        "babel-eslint": "10.0.1",
+        "babel-preset-env": "1.7.0",
+        "eslint": "5.16.0",
+        "eslint-config-airbnb": "17.1.0",
+        "eslint-config-prettier": "4.3.0",
+        "eslint-plugin-import": "2.17.3",
+        "eslint-plugin-jsx-a11y": "6.2.1",
+        "eslint-plugin-jsx-control-statements": "^2.2.1",
+        "eslint-plugin-prettier": "3.1.0",
+        "eslint-plugin-react": "7.13.0",
+        "eslint-plugin-react-hooks": "^1.6.0",
+        "prettier": "1.17.1"
     },
     "browserslist": [
         "> 1%",
