--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "disqus-react": "1.0.5",
         "gatsby": "2.8.5",
         "gatsby-link": "^2.1.1",
+        "gatsby-paginate": "^1.0.18",
         "gatsby-plugin-catch-links": "2.0.15",
         "gatsby-plugin-feed": "2.2.2",
         "gatsby-plugin-google-analytics": "2.0.20",
