--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "eslint-plugin-prettier": "3.1.1",
         "eslint-plugin-react": "7.16.0",
         "eslint-plugin-react-hooks": "^2.1.2",
+        "gatsby-remark-series": "^1.0.2",
         "prettier": "1.18.2",
         "prop-types": "^15.7.2"
     },
