--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
         "eslint-config-prettier": "6.3.0",
         "eslint-plugin-import": "2.18.2",
         "eslint-plugin-jsx-a11y": "6.2.3",
-        "eslint-plugin-jsx-control-statements": "^2.2.1",
+        "eslint-plugin-jsx-control-statements": "2.2.1",
         "eslint-plugin-prettier": "3.1.1",
         "eslint-plugin-react": "7.16.0",
-        "eslint-plugin-react-hooks": "^2.1.2",
-        "gatsby-remark-series": "^1.0.2",
+        "eslint-plugin-react-hooks": "2.1.2",
+        "gatsby-remark-series": "1.0.2",
         "prettier": "1.18.2",
-        "prop-types": "^15.7.2"
+        "prop-types": "15.7.2"
     },
     "browserslist": [
         "> 1%",
