--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "isbot": "^3.6.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "rehype-highlight": "^6.0.0",
         "remark-mdx-images": "^2.0.0"
     },
     "keywords": [
