--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "sideEffects": false,
     "dependencies": {
         "@netlify/functions": "^1.6.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "1.0.6",
         "@remix-run/css-bundle": "^1.16.1",
         "@remix-run/netlify": "^1.16.1",
         "@remix-run/node": "^1.16.1",
         "@remix-run/react": "^1.16.1",
         "cross-env": "^7.0.3",
         "isbot": "^3.6.10",
+        "prettier-plugin-organize-imports": "^3.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rehype-highlight": "^6.0.0",
