Home mobile version light

--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
         "@netlify/functions": "^1.6.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-popover": "1.0.6",
-        "@remix-run/css-bundle": "^1.16.1",
-        "@remix-run/netlify": "^1.16.1",
-        "@remix-run/node": "^1.16.1",
-        "@remix-run/react": "^1.16.1",
+        "@remix-run/css-bundle": "^1.18.1",
+        "@remix-run/netlify": "^1.18.1",
+        "@remix-run/node": "^1.18.1",
+        "@remix-run/react": "^1.18.1",
+        "classnames": "^2.3.2",
         "cross-env": "^7.0.3",
-        "isbot": "^3.6.10",
+        "isbot": "^3.6.12",
         "prettier-plugin-organize-imports": "^3.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -34,20 +35,20 @@
         "typecheck": "tsc"
     },
     "devDependencies": {
-        "@remix-run/dev": "^1.16.1",
-        "@remix-run/eslint-config": "^1.16.1",
-        "@remix-run/serve": "^1.16.1",
+        "@remix-run/dev": "^1.18.1",
+        "@remix-run/eslint-config": "^1.18.1",
+        "@remix-run/serve": "^1.18.1",
         "@types/eslint": "^8.40.0",
-        "@types/react": "^18.2.8",
+        "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.4",
-        "esbuild": "^0.17.19",
-        "eslint": "^8.41.0",
+        "esbuild": "^0.18.11",
+        "eslint": "^8.44.0",
         "mdx-bundler": "^9.2.1",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
         "tailwindcss": "^3.3.2",
         "tailwindcss-radix": "^2.8.0",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.6"
     },
     "engines": {
         "node": "18"
