--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "@remix-run/react": "^1.18.1",
         "classnames": "^2.3.2",
         "cross-env": "^7.0.3",
+        "fast-glob": "^3.3.0",
         "isbot": "^3.6.12",
-        
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rehype-highlight": "^6.0.0",
@@ -45,8 +45,8 @@
         "eslint": "^8.44.0",
         "mdx-bundler": "^9.2.1",
         "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.3.0",
         "prettier-plugin-organize-imports": "^3.2.2",
+        "prettier-plugin-tailwindcss": "^0.3.0",
         "tailwindcss": "^3.3.2",
         "tailwindcss-radix": "^2.8.0",
         "typescript": "^5.1.6"
