--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
         "@remix-run/node": "^1.18.1",
         "@remix-run/react": "^1.18.1",
         "classnames": "^2.3.2",
+        "clsx": "^1.2.1",
         "cross-env": "^7.0.3",
         "fast-glob": "^3.3.0",
         "isbot": "^3.6.12",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rehype-highlight": "^6.0.0",
-        "remark-mdx-images": "^2.0.0"
+        "remark-mdx-images": "^2.0.0",
+        "remix-typedjson": "^0.1.7"
     },
     "keywords": [
         "thiago temple",
@@ -39,15 +41,15 @@
         "@remix-run/eslint-config": "^1.18.1",
         "@remix-run/serve": "^1.18.1",
         "@types/eslint": "^8.44.0",
-        "@types/react": "^18.2.14",
+        "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "esbuild": "^0.18.12",
-        "eslint": "^8.44.0",
+        "eslint": "^8.45.0",
         "mdx-bundler": "^9.2.1",
-        "prettier": "^2.8.8",
-        "prettier-plugin-organize-imports": "^3.2.2",
-        "prettier-plugin-tailwindcss": "^0.3.0",
-        "tailwindcss": "^3.3.2",
+        "prettier": "^3.0.0",
+        "prettier-plugin-organize-imports": "^3.2.3",
+        "prettier-plugin-tailwindcss": "^0.4.1",
+        "tailwindcss": "^3.3.3",
         "tailwindcss-radix": "^2.8.0",
         "typescript": "^5.1.6"
     },
