--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "private": true,
     "sideEffects": false,
     "dependencies": {
+        "@mapbox/rehype-prism": "^0.8.0",
         "@netlify/functions": "^1.6.0",
         "@remix-run/css-bundle": "^1.18.1",
         "@remix-run/netlify": "^1.18.1",
@@ -17,7 +18,6 @@
         "isbot": "^3.6.12",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rehype-highlight": "^6.0.0",
         "remark-mdx-images": "^2.0.0",
         "remix-typedjson": "^0.1.7"
     },
@@ -38,6 +38,7 @@
         "@remix-run/eslint-config": "^1.18.1",
         "@remix-run/serve": "^1.18.1",
         "@types/eslint": "^8.44.0",
+        "@types/mapbox__rehype-prism": "^0.8.0",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "esbuild": "^0.18.12",
