--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "sideEffects": false,
     "dependencies": {
         "@mapbox/rehype-prism": "^0.8.0",
+        "@mdx-js/esbuild": "^2.3.0",
         "@netlify/functions": "^1.6.0",
         "@remix-run/css-bundle": "^1.18.1",
         "@remix-run/netlify": "^1.18.1",
@@ -14,8 +15,10 @@
         "@remix-run/react": "^1.18.1",
         "clsx": "^2.0.0",
         "cross-env": "^7.0.3",
+        "esbuild": "^0.18.13",
         "fast-glob": "^3.3.0",
         "isbot": "^3.6.12",
+        "mdx-bundler": "^9.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "remark-mdx-images": "^2.0.0",
@@ -41,12 +44,11 @@
         "@types/mapbox__rehype-prism": "^0.8.0",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
-        "esbuild": "^0.18.13",
         "eslint": "^8.45.0",
-        "mdx-bundler": "^9.2.1",
         "prettier": "^3.0.0",
         "prettier-plugin-organize-imports": "^3.2.3",
         "prettier-plugin-tailwindcss": "^0.4.1",
+        "remix-development-tools": "^1.0.4",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.1.6"
     },
