--- a/.dockerignore
+++ b/.dockerignore
@@ -21,7 +21,9 @@ node_modules
 /tests/fixtures/email/
 /coverage
 
-/other/cache.db
+.git
+Dockerfile
+.dockerignore
 
 # Easy way to create temporary files/folders that won't accidentally be added to git
 *.local.*
