--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,15 @@
 	"cSpell.words": ["clsx", "frontmatter", "typedjson"],
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"cssvar.files": [
-    "./node_modules/open-props/open-props.min.css",
-    // if you have an alternative path to where your styles are located
-    // you can add it in this array of files
-    "assets/styles/variables.css"
-  ],
+		"./node_modules/open-props/open-props.min.css",
+		// if you have an alternative path to where your styles are located
+		// you can add it in this array of files
+		"assets/styles/variables.css"
+	],
 
-  // Do not ignore node_modules css files, which is ignored by default
-  "cssvar.ignore": [],
+	// Do not ignore node_modules css files, which is ignored by default
+	"cssvar.ignore": [],
 
-  // add support for autocomplete in JS or JS like files
-  "cssvar.extensions": [
-    "css", "postcss", "jsx", "tsx", "svelte"
-  ]
+	// add support for autocomplete in JS or JS like files
+	"cssvar.extensions": ["css", "postcss", "jsx", "tsx", "svelte"]
 }
