--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
 	"useTabs": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"tailwindConfig": "./tailwind.config.ts",
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
