--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"remark-toc": "^8.0.1",
 		"remark-unwrap-images": "^3.0.1",
 		"shiki": "^0.14.3",
-		"tailwind-merge": "^1.14.0"
+		"tailwind-merge": "^1.14.0",
+		"zod": "^3.22.2"
 	}
 }
