--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"dependencies": {
 		"@fontsource/jetbrains-mono": "^5.0.9",
 		"@fontsource/manrope": "^5.0.9",
+		"@vercel/analytics": "^1.0.2",
 		"clsx": "^2.0.0",
 		"fathom-client": "^3.5.0",
 		"lucide-svelte": "^0.268.0",
