--- a/package.json
+++ b/package.json
@@ -42,14 +42,11 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/jetbrains-mono": "^5.0.11",
-		"@fontsource/manrope": "^5.0.11",
 		"@vercel/analytics": "^1.0.2",
 		"clsx": "^2.0.0",
 		"fathom-client": "^3.5.0",
-		"lucide-svelte": "^0.268.0",
+		"lucide-svelte": "0.275.0-beta.0",
 		"mdsvex-relative-images": "^1.0.3",
-		"open-props": "^1.5.15",
 		"rehype-slug": "^6.0.0",
 		"remark-toc": "^8.0.1",
 		"remark-unwrap-images": "^3.0.1",
